--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/triximi-ivana/Library/Android/sdk
-flutter.sdk=/Users/triximi-ivana/Desktop/flutter/flutter
+sdk.dir=C:\\Users\\HP\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
